Use AskUserActionInterface (async) in UserNotificationHandler

This avoids using QDialog::exec(), which uses a nested eventloop, with all
the problems that come from such usage.

BUG: 451834
FIXED-IN: 5.97